# qgroundcontrol

./: CMakeLists.txt  README.md  UGC-Config.json  qgcimages.qrc  qgroundcontrol.qrc
docs/: mqtt-data.json
libs/PahoMqttCpp/DebugLib/lib/: paho-mqtt3a-static.lib  paho-mqtt3c-static.lib
libs/PahoMqttCpp/DebugLib/lib/cmake/PahoMqttCpp/: PahoMqttCppTargets-debug.cmake
libs/PahoMqttCpp/DebugLib/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig.cmake
libs/PahoMqttCpp/ReleaseLib/lib/: paho-mqtt3a-static.lib  paho-mqtt3c-static.lib  paho-mqttpp3-static.lib
libs/PahoMqttCpp/ReleaseLib/lib/cmake/PahoMqttCpp/: PahoMqttCppTargets-release.cmake  PahoMqttCppTargets.cmake
libs/PahoMqttCpp/ReleaseLib/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig-release.cmake
libs/PahoMqttCpp/lib/: paho-mqtt3a-static.lib  paho-mqtt3c-static.lib
libs/PahoMqttCpp/lib/cmake/PahoMqttCpp/: PahoMqttCppConfig.cmake  PahoMqttCppTargets.cmake
libs/PahoMqttCpp/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig-debug.cmake  eclipse-paho-mqtt-cConfig.cmake
libs/mdk-sdk/include/mdk/: global.h
libs/mdk-sdk/lib/arm64/: mdk.lib
libs/mdk-sdk/lib/x64/: mdk.lib
libs/mdk-sdk/lib/x86/: mdk.lib
src/: QGCApplication.cc  QGCToolbox.cc  QGCToolbox.h
src/Comms/: CMakeLists.txt  JoystickLink.cpp  JoystickLink.h  JoystickSerialPortManager.cpp  JoystickSerialPortManager.h  MqttLink.cpp  MqttLink.h  MqttManager.cpp  MqttManager.h  QGC-Mqtt-Config.json
src/FlightDisplay/: FlightDisplayViewLidar.qml  FlyView.qml  FlyViewLidar.qml  FlyViewWidgetLayer.qml
src/QmlControls/: QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h
src/QmlControls/QGroundControl/FlightDisplay/: qmldir
src/VideoManager/: CMakeLists.txt  LidarManager.cc  LidarManager.cpp  LidarManager.h  mdkplayer.cpp  mdkplayer.h
src/VideoManager/VideoReceiver/GStreamer/: GStreamer.cc
